# ludoSpring

./: .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE-CC-BY-SA  LICENSE-ORC  Makefile  README.md  deny.toml  rust-toolchain.toml
barracuda/: Cargo.toml
barracuda/shaders/game/: README.md  fog_of_war.wgsl  pathfind_wavefront.wgsl  tile_lighting.wgsl
barracuda/src/: capability_domains.rs  composition_targets.rs  lib.rs  niche.rs
barracuda/src/biomeos/: mod.rs
barracuda/src/game/: genre.rs  mod.rs  raycaster.rs  ruleset.rs  state.rs  voxel.rs
barracuda/src/game/engine/: action.rs  audio.rs  entity.rs  gpu.rs  gpu_context.rs  mod.rs  session.rs  tensor_ops.rs  world.rs
barracuda/src/game/rpgpt/: condition_map.rs  dialogue.rs  knowledge.rs  memory.rs  mod.rs  npc.rs  plane.rs  scene.rs  transition.rs  trust.rs  voice.rs
barracuda/src/interaction/: accessibility.rs  difficulty.rs  flow.rs  goms.rs  input_laws.rs  mod.rs
barracuda/src/ipc/: btsp.rs  composition.rs  coralreef.rs  discovery.rs  envelope.rs  envelope_tests.rs  handlers.rs  methods.rs  mod.rs  nestgate.rs  neural_bridge.rs  params.rs  provenance.rs  results.rs  rpc_client.rs  server.rs  squirrel.rs  tarpc_service.rs  toadstool.rs
barracuda/src/ipc/discovery/: capabilities.rs  mod.rs
barracuda/src/ipc/handlers/: delegation.rs  gpu.rs  lifecycle.rs  mcp.rs  mod.rs  neural.rs  science.rs  tests.rs
barracuda/src/ipc/provenance/: loamspine.rs  mod.rs  rhizocrypt.rs  sweetgrass.rs
barracuda/src/metrics/: engagement.rs  fun_keys.rs  mod.rs  tufte_gaming.rs
barracuda/src/procedural/: bsp.rs  lsystem.rs  mod.rs  noise.rs  wfc.rs
barracuda/src/telemetry/: events.rs  mapper.rs  mod.rs  report.rs
barracuda/src/tolerances/: game.rs  gpu.rs  interaction.rs  ipc.rs  metrics.rs  mod.rs  procedural.rs  validation.rs
barracuda/src/validation/: mod.rs
barracuda/src/visualization/: mod.rs  push_client.rs
barracuda/tests/: composition_parity.rs  determinism.rs  ipc_integration.rs  ipc_test_util.rs  proptest_invariants.rs  python_parity.rs  validation.rs
benchmarks/: Cargo.toml
benchmarks/benches/: ecs_tick.rs  noise_throughput.rs  raycaster_throughput.rs
benchmarks/src/: ecs.rs  lib.rs  noise.rs  raycaster.rs
config/: capability_registry.toml
deploy/: ludospring.toml
docs/: PRIMAL_GAPS.md
experiments/: README.md
experiments/exp002_procedural_molecule_gen/: Cargo.toml
experiments/exp002_procedural_molecule_gen/src/: main.rs
experiments/exp004_folding_adversarial/: Cargo.toml
experiments/exp004_folding_adversarial/src/: main.rs
experiments/exp006_hick_menu_depth/: Cargo.toml
experiments/exp006_hick_menu_depth/src/: main.rs
experiments/exp007_steering_tunnel/: Cargo.toml
experiments/exp007_steering_tunnel/src/: main.rs
experiments/exp008_wfc_crystal_lattice/: Cargo.toml
experiments/exp008_wfc_crystal_lattice/src/: main.rs
experiments/exp009_noise_molecular_density/: Cargo.toml
experiments/exp009_noise_molecular_density/src/: main.rs
experiments/exp012_flow_channel_calibration/: Cargo.toml
experiments/exp012_flow_channel_calibration/src/: main.rs
experiments/exp013_lsystem_protein_backbone/: Cargo.toml
experiments/exp013_lsystem_protein_backbone/src/: main.rs
experiments/exp017_bsp_level_generation/: Cargo.toml
experiments/exp017_bsp_level_generation/src/: main.rs
experiments/exp018_four_keys_fun/: Cargo.toml
experiments/exp018_four_keys_fun/src/: main.rs
experiments/exp019_composite_interaction_cost/: Cargo.toml
experiments/exp019_composite_interaction_cost/src/: main.rs
experiments/exp021_retention_reward_curves/: Cargo.toml
experiments/exp021_retention_reward_curves/src/: main.rs
experiments/exp022_small_multiples_minimap/: Cargo.toml
experiments/exp022_small_multiples_minimap/src/: main.rs
experiments/exp023_open_systems_benchmark/: Cargo.toml
experiments/exp023_open_systems_benchmark/src/: main.rs
experiments/exp024_doom_terminal/: Cargo.toml
experiments/exp024_doom_terminal/src/: main.rs
experiments/exp025_roguelike_explorer/: Cargo.toml
experiments/exp025_roguelike_explorer/src/: main.rs
experiments/exp026_game_telemetry/: Cargo.toml
experiments/exp026_game_telemetry/src/: main.rs
experiments/exp027_veloren_adapter/: Cargo.toml
experiments/exp027_veloren_adapter/src/: main.rs
experiments/exp028_fishfolk_adapter/: Cargo.toml
experiments/exp028_fishfolk_adapter/src/: main.rs
experiments/exp030_cpu_gpu_parity/: Cargo.toml
experiments/exp030_cpu_gpu_parity/shaders/: abs.wgsl  dda_raycast.wgsl  dot_product.wgsl  engagement_batch.wgsl  lcg.wgsl  perlin_2d.wgsl  reduce_sum.wgsl  relu.wgsl  scale.wgsl  sigmoid.wgsl  softmax.wgsl
experiments/exp030_cpu_gpu_parity/src/: gpu.rs  main.rs  shaders.rs  validate.rs
experiments/exp031_dispatch_routing/: Cargo.toml
experiments/exp031_dispatch_routing/src/: main.rs
experiments/exp032_mixed_hardware/: Cargo.toml
experiments/exp032_mixed_hardware/src/: main.rs
experiments/exp033_nucleus_pipeline/: Cargo.toml
experiments/exp033_nucleus_pipeline/src/: main.rs
experiments/exp034_python_parity_bench/: Cargo.toml
experiments/exp034_python_parity_bench/src/: main.rs
experiments/exp035_noise_throughput/: Cargo.toml
experiments/exp035_noise_throughput/src/: main.rs
experiments/exp036_raycaster_throughput/: Cargo.toml
experiments/exp036_raycaster_throughput/src/: main.rs
experiments/exp037_tick_budget/: Cargo.toml
experiments/exp037_tick_budget/src/: main.rs
graphs/: ludospring_cell.toml  ludospring_deploy.toml  ludospring_gaming_niche.toml  rpgpt_compute_engine.toml  rpgpt_dialogue_engine.toml
metalForge/: LOCAL_HARDWARE_PROFILE.md  SYMPHONY_ARCHITECTURE.md
niches/: ludospring-game.yaml  rpgpt-dialogue.yaml
specs/: BARRACUDA_REQUIREMENTS.md  CROSS_DOMAIN_LEARNING.md  GAME_ENGINE_NICHE_SPECIFICATION.md  GAME_HISTORY_REVALIDATION.md  GAME_QUALITY_PROFILES.md  LUDOLOGY_DOMAIN_SPECIFICATION.md  LYSOGENY_CATALOG.md  OPEN_SYSTEMS_BENCHMARK_SPECIFICATION.md  PLATFORM_CHIMERA_SPECIFICATION.md  RPGPT_ARCHITECTURE_SKETCH.md  RPGPT_DEEP_SYSTEM_DESIGN.md  (+4 more)
(+277 files in other folders)
