# SPDX-License-Identifier: AGPL-3.0-or-later
#
# ludoSpring workspace — the science of play, interaction, and game design.
#
# Stops Cargo from walking up to the parent ecoPrimals workspace.
# Each sub-crate retains its own [workspace] root so that `cargo test`
# works both from sub-crate directories and from this root via
# `--manifest-path`.

[workspace]
resolver = "2"
members = [
    "barracuda",
    "benchmarks",
    "metalForge/forge",
    "experiments/exp001_doom_raycaster_analysis",
    "experiments/exp002_procedural_molecule_gen",
    "experiments/exp003_tufte_game_ui",
    "experiments/exp004_folding_adversarial",
    "experiments/exp005_fitts_device_sweep",
    "experiments/exp006_hick_menu_depth",
    "experiments/exp007_steering_tunnel",
    "experiments/exp008_wfc_crystal_lattice",
    "experiments/exp009_noise_molecular_density",
    "experiments/exp010_engagement_curves",
    "experiments/exp011_goms_task_completion",
    "experiments/exp012_flow_channel_calibration",
    "experiments/exp013_lsystem_protein_backbone",
    "experiments/exp014_hybrid_noise_wfc",
    "experiments/exp015_accessibility_motor_limited",
    "experiments/exp016_cognitive_load_tufte",
    "experiments/exp017_bsp_level_generation",
    "experiments/exp018_four_keys_fun",
    "experiments/exp019_composite_interaction_cost",
    "experiments/exp020_difficulty_skill_balance",
    "experiments/exp021_retention_reward_curves",
    "experiments/exp022_small_multiples_minimap",
    "experiments/exp023_open_systems_benchmark",
    "experiments/exp024_doom_terminal",
    "experiments/exp025_roguelike_explorer",
    "experiments/exp026_game_telemetry",
    "experiments/exp027_veloren_adapter",
    "experiments/exp028_fishfolk_adapter",
    "experiments/exp029_abstreet_adapter",
    "experiments/exp030_cpu_gpu_parity",
    "experiments/exp031_dispatch_routing",
    "experiments/exp032_mixed_hardware",
    "experiments/exp033_nucleus_pipeline",
    "experiments/exp034_python_parity_bench",
    "experiments/exp035_noise_throughput",
    "experiments/exp036_raycaster_throughput",
    "experiments/exp037_tick_budget",
    "experiments/exp038_external_roguelike_control",
    "experiments/exp039_noise_cross_validation",
    "experiments/exp040_quality_discrimination",
    "experiments/exp041_ncbi_qs_integration",
    "experiments/exp042_tower_atomic_local",
    "experiments/exp043_qs_gene_fetch",
    "experiments/exp044_anderson_qs_explorer",
    "experiments/exp045_ruleset_control_systems",
    "experiments/exp046_text_adventure_dag",
    "experiments/exp047_mtg_card_provenance",
    "experiments/exp048_stack_resolution_folding",
    "experiments/exp049_novel_data_combinatorics",
    "experiments/exp050_game_tree_design_metric",
    "experiments/exp051_games_at_home",
    "experiments/exp052_provenance_trio_integration",
    "experiments/exp053_extraction_shooter_provenance",
    "experiments/exp054_composable_raid_visualization",
    "experiments/exp055_usurper",
    "experiments/exp056_integrase",
    "experiments/exp057_symbiont",
    "experiments/exp058_conjugant",
    "experiments/exp059_quorum",
    "experiments/exp060_pathogen",
    "experiments/exp061_fermenting",
    "experiments/exp062_field_sample_provenance",
    "experiments/exp063_consent_gated_medical",
    "experiments/exp064_beardog_signed_chain",
    "experiments/exp065_cross_domain_fraud",
    "experiments/exp066_radiating_attribution",
    "experiments/exp067_npc_knowledge_bounds",
    "experiments/exp068_lie_detection_passive_checks",
    "experiments/exp069_internal_voice_personality",
    "experiments/exp070_voice_priority_concurrency",
    "experiments/exp071_npc_memory_dag",
    "experiments/exp072_trust_dynamics_arc",
    "experiments/exp073_dialogue_skill_checks",
    "experiments/exp074_dialogue_flow_monitoring",
    "experiments/exp075_plane_transition_continuity",
    "experiments/exp076_pong",
    "experiments/exp077_spacewar",
    "experiments/exp078_tetris",
    "experiments/exp079_civilization",
    "experiments/exp080_diablo_loot",
    "experiments/exp081_procedural_generation",
    "experiments/exp082_symphony_pipeline",
    "experiments/exp083_neural_api_e2e",
    "experiments/exp084_barracuda_math_ipc",
    "experiments/exp085_shader_dispatch_chain",
    "experiments/exp086_tensor_composition",
    "experiments/exp087_neural_api_pipeline",
    "experiments/exp088_continuous_game_loop",
    "experiments/exp089_psychomotor_composition",
    "experiments/exp090_gameflow_tensor_composition",
    "experiments/exp091_pcg_noise_composition",
    "experiments/exp092_composite_pipeline",
    "experiments/exp093_continuous_session",
    "experiments/exp094_session_lifecycle",
    "experiments/exp095_content_ownership",
    "experiments/exp096_npc_dialogue_composition",
    "experiments/exp097_population_dynamics",
    "experiments/exp098_nucleus_game_session",
    "experiments/exp099_composition_validation",
    "experiments/exp100_nucleus_composition_parity",
]

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
proptest = "1"
thiserror = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
expect_used = "deny"
unwrap_used = "deny"
doc_markdown = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
cast_precision_loss = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
