# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-barracuda"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Squirrel Team"]
license.workspace = true
description = "Ludology — game science, interaction design, and play mechanics via barraCuda"
keywords = ["games", "ludology", "procedural-generation", "interaction", "gpu"]
categories = ["science", "game-engines", "command-line-utilities"]

[features]
default = []
gpu = ["barracuda/gpu", "dep:wgpu", "dep:tokio"]
# JSON-RPC IPC server for biomeOS (ludospring-server binary).
ipc = ["dep:clap", "dep:tracing", "dep:tracing-subscriber", "dep:signal-hook", "dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
clap = { version = "4", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
signal-hook = { version = "0.3", optional = true }

barracuda = { path = "../../barraCuda/crates/barracuda" }

wgpu = { version = "28", default-features = false, features = [
    "wgsl",
    "vulkan-portability",
], optional = true }
tokio = { version = "1", features = ["rt", "net", "io-util", "sync"], optional = true }

[[bin]]
name = "ludospring_dashboard"
path = "src/bin/ludospring_dashboard.rs"
required-features = ["ipc"]

[[bin]]
name = "ludospring_live_session"
path = "src/bin/ludospring_live_session.rs"
required-features = ["ipc"]

[[bin]]
name = "ludospring_tufte_dashboard"
path = "src/bin/ludospring_tufte_dashboard.rs"
required-features = ["ipc"]

[[bin]]
name = "ludospring"
path = "src/bin/ludospring.rs"
required-features = ["ipc"]

[dev-dependencies]
proptest = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
expect_used = "deny"
unwrap_used = "deny"
doc_markdown = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
