# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-barracuda"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Squirrel Team"]
license.workspace = true
description = "Ludology — game science, interaction design, and play mechanics via barraCuda"
keywords = ["games", "ludology", "procedural-generation", "interaction", "gpu"]
categories = ["science", "game-engines", "command-line-utilities"]

[features]
default = []
gpu = ["barracuda/gpu", "dep:wgpu", "dep:tokio"]
# JSON-RPC IPC server for biomeOS (ludospring-server binary).
ipc = ["dep:clap", "dep:tracing", "dep:tracing-subscriber", "dep:signal-hook", "dep:tokio"]
# Typed tarpc surface alongside JSON-RPC (UNIVERSAL_IPC_STANDARD_V3).
tarpc-ipc = ["dep:tarpc", "dep:tokio"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
signal-hook = { version = "0.3", optional = true }

barracuda = { path = "../../../primals/barraCuda/crates/barracuda", version = "0.3.11", default-features = false }

# wgpu is the only non-pure-Rust dependency (ash → Vulkan loader → system libvulkan).
# It is optional, gated behind the `gpu` feature, and never active in default builds.
# Evolution path: as coralReef (sovereign shader compiler) matures, local WGSL
# shaders will be compiled via coralReef IPC rather than wgpu dispatch. At that
# point, wgpu becomes unnecessary and can be removed entirely.
# Until then: no wgpu in default features, no wgpu in CI quality gates.
wgpu = { version = "28", default-features = false, features = [
    "wgsl",
    "vulkan-portability",
], optional = true }
tokio = { version = "1", features = ["rt", "net", "io-util", "sync"], optional = true }
tarpc = { version = "0.37", features = ["full"], optional = true }

[[bin]]
name = "ludospring"
path = "src/bin/ludospring.rs"
required-features = ["ipc"]

[[example]]
name = "generate_composition_targets"
path = "../baselines/rust/generate_composition_targets.rs"

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
