# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp007"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp007_steering_tunnel"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
