# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp008"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp008_wfc_crystal_lattice"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
