# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp009"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp009_noise_molecular_density"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }

[lints]
workspace = true
