# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp012"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp012_flow_channel_calibration"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
