# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp013"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp013_lsystem_protein_backbone"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }

[lints]
workspace = true
