# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp023"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp023_open_systems_benchmark"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
fastnoise-lite = "1"

[lints]
workspace = true
