# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp025"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp025_roguelike_explorer"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
