# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp026"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp026_game_telemetry"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
serde_json = "1"

[lints]
workspace = true
