# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp027"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp027_veloren_adapter"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
serde_json = "1"
regex = "1"

[lints]
workspace = true
