# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp028"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp028_fishfolk_adapter"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
serde_json = "1"

[lints]
workspace = true
