# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp030"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp030_cpu_gpu_parity"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
barracuda = { path = "../../../barraCuda/crates/barracuda" }
wgpu = { version = "28", default-features = false, features = [
    "wgsl",
    "vulkan-portability",
] }
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
doc_markdown = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
