# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp030"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp030_cpu_gpu_parity"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
barracuda = { path = "../../../../primals/barraCuda/crates/barracuda" }
wgpu = { version = "28", default-features = false, features = [
    "wgsl",
    "vulkan-portability",
] }
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

[lints]
workspace = true
