# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp031"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp031_dispatch_routing"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
ludospring-forge = { path = "../../metalForge/forge" }
wgpu = { version = "28", default-features = false, features = [
    "wgsl",
    "vulkan-portability",
] }
pollster = "0.4"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
doc_markdown = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
