# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp031"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp031_dispatch_routing"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
ludospring-forge = { path = "../../metalForge/forge" }
wgpu = { version = "28", default-features = false, features = [
    "wgsl",
    "vulkan-portability",
] }
pollster = "0.4"

[lints]
workspace = true
