# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp032"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp032_mixed_hardware"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
ludospring-forge = { path = "../../metalForge/forge" }

[lints]
workspace = true
