# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp033"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp033_nucleus_pipeline"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
ludospring-forge = { path = "../../metalForge/forge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
