# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp034"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp034_python_parity_bench"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }

[lints]
workspace = true
