# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp035"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp035_noise_throughput"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
ludospring-benchmarks = { path = "../../benchmarks" }
fastnoise-lite = "1"

[lints]
workspace = true
