# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "ludospring-exp036"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp036_raycaster_throughput"
path = "src/main.rs"

[dependencies]
ludospring-barracuda = { path = "../../barracuda" }
ludospring-benchmarks = { path = "../../benchmarks" }

[lints]
workspace = true
